WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171179
[ATK] GridCellRole should implement AtkTableCell (regression?)
https://bugs.webkit.org/show_bug.cgi?id=171179
Summary
[ATK] GridCellRole should implement AtkTableCell (regression?)
Joanmarie Diggs
Reported
2017-04-22 17:33:40 PDT
I suspect this is a regression resulting from a change made when implementing the new ARIA "cell" role. But GridCellRole elements should implement AtkTableCell (just like CellRole, ColumnHeaderRole, and RowHeaderRole do).
Attachments
Patch
(7.72 KB, patch)
2017-04-27 12:32 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-04-22 17:34:15 PDT
<
rdar://problem/31775799
>
Joanmarie Diggs
Comment 2
2017-04-27 12:32:48 PDT
Created
attachment 308428
[details]
Patch
Joanmarie Diggs
Comment 3
2017-04-28 08:36:49 PDT
Chris: Please review. Thanks!
WebKit Commit Bot
Comment 4
2017-04-28 09:28:35 PDT
Comment on
attachment 308428
[details]
Patch Clearing flags on attachment: 308428 Committed
r215926
: <
http://trac.webkit.org/changeset/215926
>
WebKit Commit Bot
Comment 5
2017-04-28 09:28:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug