[ATK] GridCellRole should implement AtkTableCell (regression?) https://bugs.webkit.org/show_bug.cgi?id=171179

Reviewed by Chris Fleizach.

Source/WebCore:

Add GridCellRole to the group of roles which should implement AtkTableCell.

Test: accessibility/gtk/interface-table-cell.html

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(getInterfaceMaskFromObject):

Tools:

Add new "AXInterfaceTableCell" attribute so that we can test whether or
not there is an implementation of AtkTableCell (i.e. without risking false
negatives from bugs in the interface's implementation).

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::boolAttributeValue):

LayoutTests:

* accessibility/gtk/interface-table-cell-expected.txt: Added.
* accessibility/gtk/interface-table-cell.html: Added.


Canonical link: https://commits.webkit.org/188319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215926 268f45cc-cd09-0410-ab3c-d52691b4dbfc